@@ -1,4 +1,7 @@
 2010-08-16  Piotr Fusik  <fox@scene.pl>
+* csharp/SilverASAP.cs: lots of fast "Play" clicks could start multiple songs
+  (reported by Slaves)
+
 * java/Makefile: re-compress *.jar with 7-Zip
 
 
